finetune last layer

--- a/ViT/notebook.ipynb
+++ b/ViT/notebook.ipynb
@@ -59,9 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mengjingliu/.local/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# test ViT\n",
     "import sys\n",
@@ -84,9 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of ViTForImageClassification were not initialized from the model checkpoint at google/vit-base-patch16-224-in21k and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load model from .pth\n",
     "model_name_or_path = \"google/vit-base-patch16-224-in21k\"\n",
@@ -97,7 +125,7 @@
     "# Move model to device\n",
     "model.to(device)\n",
     "# Load the state dict\n",
-    "state_dict = torch.load('/home/mengjingliu/ADL_unsupervised_learning/ViT/results/best_model_google_vit-base-patch16-224-in21kstandard.pth')\n",
+    "state_dict = torch.load('/home/mengjingliu/ADL_unsupervised_learning/ViT/results/best_model_google_vit-base-patch16-224-in21k_standard.pth')\n",
     "\n",
     "# Load the state dict into the model\n",
     "model.load_state_dict(state_dict)"
@@ -105,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing accuracy: 0.8481675386428833\n"
+     ]
+    }
+   ],
    "source": [
     "# evaluate model \n",
     "model.eval()\n",
@@ -135,6 +171,13 @@
     "accuracy = accuracy(outputs, y_test)\n",
     "print(f'Testing accuracy: {accuracy}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -144,7 +187,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.19"
   }
  },
